--- a/index.html
+++ b/index.html
@@ -207,6 +207,18 @@
         }
     };
 </script>
-
+<style>
+    body::after {
+      content: "版权所有 © 2019-2026 天狐慕氏联邦帝国";
+      background-color: #f5f5f5;
+      padding: 10px;
+      text-align: center;
+      font-family: Arial, sans-serif;
+      position: fixed;
+      bottom: 0;
+      left: 0;
+      width: 100%;
+    }
+  </style>
 </body>
 </html>
